Fixing metamask button on paypment popup overflowing on mobile view

--- a/components/MetamaskConnection/metamask.module.scss
+++ b/components/MetamaskConnection/metamask.module.scss
@@ -15,6 +15,8 @@
   border: 1px solid transparent;
   border-radius: 0;
   font-weight: 600;
+  word-break: break-word;
+
   &:hover {
     background-color: #ccc;
   }
